# openprover

./: .gitignore  DOCS.md  README.md  pyproject.toml  todo.txt
examples/: addition.lean  addition.md  cauchy_schwarz.md
examples/martin/: 1.md  2.md  3.md  4.md
lumi/jobs/: job_interact.sh  job_interact_cpu.sh
openarxiv/: arxiv.py  build_data.py
openarxiv/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
openarxiv/web/src/: App.css  App.jsx  index.css  main.jsx
openarxiv/web/src/components/: CostBadge.jsx  MathMarkdown.css  MathMarkdown.jsx  ProblemSummary.jsx
openarxiv/web/src/hooks/: useData.jsx
openarxiv/web/src/pages/: PaperDetail.css  PaperDetail.jsx  PaperList.css  PaperList.jsx  ProblemDetail.css  ProblemDetail.jsx
openprover/: budget.py  cli.py  inspect.py  llm.py  prompts.py  prover.py  tui.py
openprover/lean/: __init__.py  core.py  mcp_server.py  tools.py
openprover/llm/: __init__.py  claude.py  codex.py  hf.py  mistral.py
openprover/tui/: _colors.py  _input.py  _nav.py  _render.py  _steps.py  _stream.py  _tabs.py  _types.py  headless.py  tui.py
scripts/: bench_hf.py  bench_vllm.py  inspect_prompts.py  lean_search.py  ping_claude.py  ping_codex.py  ping_hf.py  ping_mistral.py  ping_vllm.py  run_proofbench.py  run_putnam.py  serve_hf.py  test_vllm.py
tests/: test_resize.py  test_tui_keys.py
